# app/security.go
@@ -1,0 +1,48 @@
+// Code generated by goagen v1.3.1, DO NOT EDIT.
+//
+// API "area": Application Security
+//
+// Command:
+// $ goagen
+// --design=github.com/hryktrd/goaTest/design
+// --out=$(GOPATH)\src\github.com\hryktrd\goaTest
+// --regen=true
+// --version=v1.3.1
+
+package app
+
+import (
+	"context"
+	"github.com/goadesign/goa"
+	"net/http"
+)
+
+type (
+	// Private type used to store auth handler info in request context
+	authMiddlewareKey string
+)
+
+// UseBasicAuthMiddleware mounts the BasicAuth auth middleware onto the service.
+func UseBasicAuthMiddleware(service *goa.Service, middleware goa.Middleware) {
+	service.Context = context.WithValue(service.Context, authMiddlewareKey("BasicAuth"), middleware)
+}
+
+// NewBasicAuthSecurity creates a BasicAuth security definition.
+func NewBasicAuthSecurity() *goa.BasicAuthSecurity {
+	def := goa.BasicAuthSecurity{}
+	def.Description = "Use client ID and client secret to authenticate"
+	return &def
+}
+
+// handleSecurity creates a handler that runs the auth middleware for the security scheme.
+func handleSecurity(schemeName string, h goa.Handler, scopes ...string) goa.Handler {
+	return func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		scheme := ctx.Value(authMiddlewareKey(schemeName))
+		am, ok := scheme.(goa.Middleware)
+		if !ok {
+			return goa.NoAuthMiddleware(schemeName)
+		}
+		ctx = goa.WithRequiredScopes(ctx, scopes)
+		return am(h)(ctx, rw, req)
+	}
+}
